--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -187,7 +187,7 @@ h1, h2, h3, h4, h5, h6 {
   }
   .nav-menu a span {
     display: none;
-    color: #fff;
+    color: #0563bb;
   }
 }
 
@@ -247,7 +247,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/nordwood-themes-wt4gUtdv1-U-unsplash.jpg") top right no-repeat;
+  background: url("../../img/nordwood-themes-wt4gUtdv1-U-unsplash.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -436,7 +436,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Akills
+# skills
 --------------------------------------------------------------*/
 .skills .progress {
   height: 50px;
