--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
-.back-to-top {
+/* .back-to-top {
   position: fixed;
   display: none;
   width: 40px;
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
-#preloader {
+/* #preloader {
   position: fixed;
   top: 0;
   left: 0;
@@ -100,8 +100,8 @@ h1, h2, h3, h4, h5, h6 {
   }
   100% {
     transform: rotate(360deg);
-  }
-}
+  } */
+/* } */ 
 
 /*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
@@ -209,7 +209,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
 }
 
-/* Mobile Navigation */
+/*Mobile Navigation*/
 .mobile-nav-toggle {
   position: fixed;
   right: 15px;
@@ -290,21 +290,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .social-links {
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 #hero .social-links a {
-  font-size: 24px;
+  font-size: 35px;
   display: inline-block;
   color: #45505b;
   line-height: 1;
   margin-right: 20px;
   transition: 0.3s;
+  font-weight: bold;
 }
 
 #hero .social-links a:hover {
-  color: #0563bb;
-  font-weight: bold;
+  color: #0563bb; 
 
 }
 
